@@ -1,3 +1,15 @@
+2010-07-13  Ivan Maidanski <ivmai@mail.ru>
+
+	* gc_dlopen.c (disable_gc_for_dlopen): Update the comment.
+	* gc_dlopen.c (dlopen): Ditto.
+	* include/gc.h: Update copyright header.
+	* include/gc.h (GC_enable_incremental): Refine the comment.
+	* include/gc.h (DECLSPEC_NORETURN): Define macro as empty if
+	missing (only for Win32).
+	* include/gc.h (GC_ExitThread): Use DECLSPEC_NORETURN.
+	* win32_threads.c (GC_ExitThread): Ditto.
+	* include/gc.h (GC_endthreadex): Add a comment.
+
 2010-05-31  Ivan Maidanski <ivmai@mail.ru> (really Alexander Belchenko)
 
 	* include/cord.h: Fix typos.
